#mant0000080: [PRO-001] Chiffre dans le prénom

--- a/src/app/modules/commons/users/profile/writeProfile.html
+++ b/src/app/modules/commons/users/profile/writeProfile.html
@@ -87,7 +87,7 @@
                                 <label for="userFirstname">{{'profilePage.form.label.firstname' | translate }} <span
                                         class="colorAccent-text">*</span></label>
                                 <input ng-model="user.firstname" id="userFirstname" name="userFirstname" type="text"
-                                       class="validate" required
+                                       class="validate" required ng-pattern="'[a-zA-Z -]+'"
                                        ng-class="{ 'has-error' : profileForm.userFirstname.$invalid && !profileForm.userFirstname.$pristine }">
                                 <span class="small colorAccent-text"
                                       ng-show="profileForm.userFirstname.$invalid && !profileForm.userFirstname.$pristine"
