--- a/src/app/modules/commons/users/signup/signupStart.html
+++ b/src/app/modules/commons/users/signup/signupStart.html
@@ -1,6 +1,6 @@
 <div class="colorMain-text">
     <div class="hero-signup white-text center-align">
-        
+
         <h2 class="title" translate="signupStartPage.title1"></h2>
         <h5 class="title hide-on-small-only" translate="signupStartPage.title2"></h5>
 
@@ -13,15 +13,16 @@
         </div>
     </div>
 
-    <form ng-submit="usernameTest()" name="signupStartPageForm">    
+    <form ng-submit="usernameTest()" name="signupStartPageForm">
         <div class="row container">
 
-        <!-- Firstname & Name -->
+            <!-- Firstname & Name -->
             <div class="col m1 hide-on-small-only">&nbsp;</div>
             <div class="col s12 m4 input-field">
-                <input id="firstname" type="text" class="validate" ng-model="signup.firstname" required tabindex="1">
+                <input id="firstname" type="text" class="validate" ng-model="signup.firstname" required tabindex="1"
+                       ng-pattern="'[a-zA-Z -]+'">
                 <label for="firstname">
-                    {{'signupStartPage.form.label.firstname' | translate }} 
+                    {{'signupStartPage.form.label.firstname' | translate }}
                     <span class="colorAccent-text">*</span>
                 </label>
             </div>
@@ -29,23 +30,25 @@
             <div class="col m2 hide-on-small-only">&nbsp;</div>
 
             <div class="col s12 m4 input-field">
-                <input id="name" type="text" class="validate" ng-model="signup.name" required tabindex="2">
+                <input id="name" type="text" class="validate" ng-model="signup.name" required tabindex="2"
+                       ng-pattern="'[a-zA-Z -]+'">
                 <label for="name">
-                    {{'signupStartPage.form.label.name' | translate }} 
+                    {{'signupStartPage.form.label.name' | translate }}
                     <span class="colorAccent-text">*</span>
                 </label>
             </div>
 
             <div class="col m1 hide-on-small-only">&nbsp;</div>
         </div>
-        
+
         <div class="row container">
-        <!-- Login & e-Mail -->
+            <!-- Login & e-Mail -->
             <div class="col m1 hide-on-small-only">&nbsp;</div>
             <div class="col s12 m4 input-field">
-                <input id="login" type="text" class="validate" ng-model="signup.account.login" required tabindex="3">
+                <input id="login" type="text" class="validate" ng-model="signup.account.login" required tabindex="3"
+                       ng-pattern="'[a-zA-Z]+'">
                 <label for="login">
-                    {{'signupStartPage.form.label.login' | translate }} 
+                    {{'signupStartPage.form.label.login' | translate }}
                     <span class="colorAccent-text">*</span>
                 </label>
             </div>
@@ -55,30 +58,33 @@
             <div class="col s12 m4 input-field">
                 <input type="text" name="email" id="email" ng-model="signup.contact.email"
                        ng-pattern="/^[a-z]+[a-z0-9._]+@[a-z]+\.[a-z.]{2,5}$/"
-                        tabindex="4">
+                       tabindex="4">
                 <label for="email">
-                    {{'signupStartPage.form.label.email' | translate }} 
+                    {{'signupStartPage.form.label.email' | translate }}
                     <span class="colorAccent-text">*</span>
                 </label>
                 <span ng-class="{'has-error': signupStartPageForm.email.$dirty && signupStartPageForm.email.$error.required}"
                       class="small colorAccent-text"
-                      ng-hide="signupStartPageForm.email.$valid" translate="signupStartPage.form.messageControl.emailDirty"></span>
+                      ng-hide="signupStartPageForm.email.$valid"
+                      translate="signupStartPage.form.messageControl.emailDirty"></span>
             </div>
             <div class="col m1 hide-on-small-only">&nbsp;</div>
         </div>
-        
+
         <div class="row container">
-        <!-- Password & confirm -->
+            <!-- Password & confirm -->
             <div class="col m1 hide-on-small-only">&nbsp;</div>
             <div class="col s12 m4 input-field">
-                <input id="password" type="password" class="validate" ng-model="signup.account.passwd" required tabindex="5">
+                <input id="password" type="password" class="validate" ng-model="signup.account.passwd" required
+                       tabindex="5">
                 <label for="password">
-                    {{'signupStartPage.form.label.password' | translate }} 
+                    {{'signupStartPage.form.label.password' | translate }}
                     <span class="colorAccent-text">*</span>
                 </label>
                 <div ng-show="signup.account.passwd">
                     <small translate='signupStartPage.form.messageControl.passwdStrength'></small>
-                    <div ng-hide="true" ng-password-strength="signup.account.passwd" strength="passStrength" inner-class="meter"></div>
+                    <div ng-hide="true" ng-password-strength="signup.account.passwd" strength="passStrength"
+                         inner-class="meter"></div>
                     <div class="progress grey lighten-2">
                         <div class="determinate"
                              ng-class="{'red' : passStrength < 33, 'orange': passStrength >= 33 && passStrength < 66, 'green' : passStrength >= 66}"
@@ -91,12 +97,15 @@
             <div class="col m2 hide-on-small-only">&nbsp;</div>
 
             <div class="col s12 m4 input-field">
-                <input id="passwordConfirm" name="passwordConfirm" type="password" class="validate" ng-model="passwdConfirm" required tabindex="6" passwd-check="password">
+                <input id="passwordConfirm" name="passwordConfirm" type="password" class="validate"
+                       ng-model="passwdConfirm" required tabindex="6" passwd-check="password">
                 <label for="passwordConfirm">
-                    {{'signupStartPage.form.label.passwordConfirm' | translate }} 
+                    {{'signupStartPage.form.label.passwordConfirm' | translate }}
                     <span class="colorAccent-text">*</span>
                 </label>
-                <span ng-show="signupStartPageForm.passwordConfirm.$dirty && signupStartPageForm.passwordConfirm.$error.pwmatch" class="small colorAccent-text" translate="signupStartPage.form.messageControl.password.different"></span>
+                <span ng-show="signupStartPageForm.passwordConfirm.$dirty && signupStartPageForm.passwordConfirm.$error.pwmatch"
+                      class="small colorAccent-text"
+                      translate="signupStartPage.form.messageControl.password.different"></span>
             </div>
             <div class="col m1 hide-on-small-only">&nbsp;</div>
         </div>
@@ -111,25 +120,30 @@
                     </div>
                     <div class="col s6 m1" style="line-height:0.5;">
                         <a href="javascript:Recaptcha.reload()">
-                            <img width="25" height="18" src="https://www.google.com/recaptcha/api/img/clean/refresh.png">
+                            <img width="25" height="18"
+                                 src="https://www.google.com/recaptcha/api/img/clean/refresh.png">
                         </a>
                         <br class="hide-on-med-and-down">
 
-                        <a class="recaptcha_only_if_image" href="javascript:Recaptcha.switch_type('audio')" id="icon-audio">
+                        <a class="recaptcha_only_if_image" href="javascript:Recaptcha.switch_type('audio')"
+                           id="icon-audio">
                             <img width="25" height="18" src="https://www.google.com/recaptcha/api/img/clean/audio.png">
                         </a>
 
-                        <a class="recaptcha_only_if_audio" href="javascript:Recaptcha.switch_type('image')" id="icon-image">
+                        <a class="recaptcha_only_if_audio" href="javascript:Recaptcha.switch_type('image')"
+                           id="icon-image">
                             <img width="25" height="18" src="https://www.google.com/recaptcha/api/img/clean/text.png">
                         </a>
                         <br class="hide-on-med-and-down">
 
                         <a href="javascript:Recaptcha.showhelp()">
-                            <img id="recaptcha_whatsthis" width="25" height="16" src="https://www.google.com/recaptcha/api/img/clean/help.png" alt="Aide">
+                            <img id="recaptcha_whatsthis" width="25" height="16"
+                                 src="https://www.google.com/recaptcha/api/img/clean/help.png" alt="Aide">
                         </a>
                     </div>
                     <div class="col s6 m4">
-                        <img id="recaptcha_logo" alt="" width="100" height="50" src="https://www.google.com/recaptcha/api/img/clean/logo.png">
+                        <img id="recaptcha_logo" alt="" width="100" height="50"
+                             src="https://www.google.com/recaptcha/api/img/clean/logo.png">
                     </div>
 
                     <div class="col s12 m6">
@@ -144,8 +158,8 @@
         <!-- Buttons -->
         <div class="row center container">
             <div class="col s12">
-                <button ng-click="cancelSignup()" 
-                        class="modal-action modal-close waves-effect waves-white btn btn-s colorAccent" 
+                <button ng-click="cancelSignup()"
+                        class="modal-action modal-close waves-effect waves-white btn btn-s colorAccent"
                         translate="commons.buttons.cancel" tabindex="9">
                 </button>
                 <button type="submit"
@@ -156,6 +170,6 @@
             </div>
         </div>
     </form>
-    
+
     <!-- body end-->
 </div>
