--- a/src/app/modules/public/mainPublic.html
+++ b/src/app/modules/public/mainPublic.html
@@ -1,7 +1,7 @@
 <div id="index-banner" class="colorMain-text white">
     <div class="section no-pad-bot hero white-text center-align">
         
-            <h3 translate="landing.main-title"></h3>
+            <h2 translate="landing.main-title"></h2>
             <h3  class=" hide-on-small-only ">&nbsp;</h3>
             <h3 class=" hide-on-small-only ">
                 <span translate="landing.sub-title" ></span>
@@ -13,16 +13,17 @@
 
     </div>
     
-    <div class="container">
+    <div class=" colorBckgModal">
         <div class="section">
             <h3>&nbsp;</h3>
-            <h4 class="center-align colorAccent-text" translate="landing.area-2.title"></h4>
+            <h2 class="center-align colorAccent-text" translate="landing.area-2.title"></h2>
             <h3>&nbsp;</h3>
             <h5 class="center-align hide-on-small-only" translate="landing.area-2.content"></h5>
         </div>
     </div>
 
-    <div class="bckgColor colorMain-text">
+    <div class=" colorMain-text">
+        <h3>&nbsp;</h3>
         <div class="row container">
 
             <div class="col s12 m6">
