--- a/src/app/modules/commons/users/signup/signupStart.html
+++ b/src/app/modules/commons/users/signup/signupStart.html
@@ -19,9 +19,9 @@
             <!-- Firstname & Name -->
             <div class="col m1 hide-on-small-only">&nbsp;</div>
             <div class="col s12 m4 input-field">
-                <input id="firstname" name="firstname" type="text" class="validate" ng-model="signup.firstname" required tabindex="1"
-                       ng-pattern="'[a-zA-ZÀÁÂÃÄÅàáâãäåÒÓÔÕÖØòóôõöøÈÉÊËèéêëÇçÌÍÎÏìíîïÙÚÛÜùúûüÿÑñ -]+'"
-                       ng-class="{ 'has-error' : signupStartPageForm.firstname.$invalid && !signupStartPageForm.firstname.$pristine }">
+                <input id="firstname" name="firstname" type="text" class="validate" ng-model="signup.firstname" required
+                       tabindex="1"
+                       ng-pattern="'[a-zA-ZÀÁÂÃÄÅàáâãäåÒÓÔÕÖØòóôõöøÈÉÊËèéêëÇçÌÍÎÏìíîïÙÚÛÜùúûüÿÑñ -]+'">
                 <label for="firstname">
                     {{'signupStartPage.form.label.firstname' | translate }}
                     <span class="colorAccent-text">*</span>
@@ -32,7 +32,6 @@
 
             <div class="col s12 m4 input-field">
                 <input id="name" name="name" type="text" class="validate" ng-model="signup.name" required tabindex="2"
-                       ng-class="{ 'has-error' : signupStartPageForm.name.$invalid && !signupStartPageForm.name.$pristine }"
                        ng-pattern="'[a-zA-ZÀÁÂÃÄÅàáâãäåÒÓÔÕÖØòóôõöøÈÉÊËèéêëÇçÌÍÎÏìíîïÙÚÛÜùúûüÿÑñ -]+'">
                 <label for="name">
                     {{'signupStartPage.form.label.name' | translate }}
@@ -47,8 +46,8 @@
             <!-- Login & e-Mail -->
             <div class="col m1 hide-on-small-only">&nbsp;</div>
             <div class="col s12 m4 input-field">
-                <input id="login" name="login" type="text" class="validate" ng-model="signup.account.login" required tabindex="3"
-                       ng-class="{ 'has-error' : signupStartPageForm.login.$invalid && !signupStartPageForm.login.$pristine }"
+                <input id="login" name="login" type="text" class="validate" ng-model="signup.account.login" required
+                       tabindex="3"
                        ng-pattern="'[a-zA-Z0-9_\-]{3,}'">
                 <label for="login">
                     {{'signupStartPage.form.label.login' | translate }}
@@ -61,7 +60,6 @@
             <div class="col s12 m4 input-field">
                 <input type="text" name="email" id="email" ng-model="signup.contact.email"
                        ng-pattern="/^[a-z]+[a-z0-9._]+@[a-z]+\.[a-z.]{2,5}$/"
-                       ng-class="{ 'has-error' : signupStartPageForm.email.$invalid && !signupStartPageForm.email.$pristine }"
                        tabindex="4">
                 <label for="email">
                     {{'signupStartPage.form.label.email' | translate }}
